@@ -1,3 +1,9 @@
+2001-04-06  Tom Tromey  <tromey@redhat.com>
+
+	* Make-lang.in ($(srcdir)/java/parse-scan.c): Run bison from build
+	directory.
+	($(srcdir)/java/parse.c): Likewise.
+
 2001-04-05  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* gcj.texi: Use `which-gcj' instead of `which-g77.'
